error handling location, modal z-index, fixed mobile menu

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,7 +5,7 @@
 	position: sticky;
 	top: 0;
 	background: white;
-	z-index: 99;
+	z-index: 666;
 }
 
 .nav-container {
@@ -70,30 +70,36 @@
 		}
 		.hamburger {
 			display: none;
+			max-width: 24px;
 			width: 24px;
+			height: 27px;
+			max-height: 27px;
 			cursor: pointer;
 			transition: transform 0.1s linear;
-			margin-top: 5px;
+			margin-top: 4px;
 
 			@media (max-width: 768px) {
 				display: block;
 			}
 
-			@media (max-width: 370px) {
-				width: 24px;
-			}
+			// @media (max-width: 370px) {
+			// 	width: 24px;
+			// }
 		}
 	}
 }
 
 .mobile-menu {
-	display: block;
+	display: none;
 	padding: 20px;
-	position: relative;
+	padding-top: 106px;
+	position: fixed;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100vh;
 	background: $red;
-	z-index: 999;
+	z-index: 555;
 
 	.mobile-links {
 		ul {
