--- a/src/components/hiring/hiring.scss
+++ b/src/components/hiring/hiring.scss
@@ -28,6 +28,9 @@
 
 		.hiring-info {
 			margin-left: 30px;
+			@media (max-width: 490px) {
+				margin-left: 0;
+			}
 			h2 {
 				font-size: 2.4rem;
 				margin-bottom: 15px;
